# serializer version: 1
# name: TestPlasma.test_helium_treatment[disable_electron_scattering:False]
  'none'
# ---
# name: TestPlasma.test_helium_treatment[disable_electron_scattering:True]
  'none'
# ---
# name: TestPlasma.test_helium_treatment[excitation:dilute-lte]
  'none'
# ---
# name: TestPlasma.test_helium_treatment[excitation:lte]
  'none'
# ---
# name: TestPlasma.test_helium_treatment[helium_treatment:recomb-nlte-delta_treatment:0.5]
  'recomb-nlte'
# ---
# name: TestPlasma.test_helium_treatment[helium_treatment:recomb-nlte]
  'recomb-nlte'
# ---
# name: TestPlasma.test_helium_treatment[initial_t_inner:10000 K]
  'none'
# ---
# name: TestPlasma.test_helium_treatment[initial_t_rad:10000 K]
  'none'
# ---
# name: TestPlasma.test_helium_treatment[ionization:lte]
  'none'
# ---
# name: TestPlasma.test_helium_treatment[ionization:nebular]
  'none'
# ---
# name: TestPlasma.test_helium_treatment[line_interaction_type:downbranch]
  'none'
# ---
# name: TestPlasma.test_helium_treatment[line_interaction_type:macroatom]
  'none'
# ---
# name: TestPlasma.test_helium_treatment[line_interaction_type:scatter]
  'none'
# ---
# name: TestPlasma.test_helium_treatment[nlte:{'species': ['He I'], 'classical_nebular': True}]
  'none'
# ---
# name: TestPlasma.test_helium_treatment[nlte:{'species': ['He I'], 'coronal_approximation': True}]
  'none'
# ---
# name: TestPlasma.test_helium_treatment[nlte:{'species': ['He I']}]
  'none'
# ---
# name: TestPlasma.test_helium_treatment[radiative_rates_type:blackbody]
  'none'
# ---
# name: TestPlasma.test_helium_treatment[radiative_rates_type:detailed-w_epsilon:1e-10]
  'none'
# ---
# name: TestPlasma.test_helium_treatment[radiative_rates_type:detailed]
  'none'
# ---
# name: TestPlasma.test_helium_treatment[radiative_rates_type:dilute-blackbody]
  'none'
# ---
